--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,55 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add People</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>Add People</h1>
-    <div class="container">
-      <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInput"
-            aria-describedby="emailHelp"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInput"
-            aria-describedby="emailHelp"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="exampleInput"
-            aria-describedby="emailHelp"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+<div class="container">
+  <form action="/create-user" method="post">
+    <div class="mb-3">
+      <label for="fName" class="form-label">First Name</label>
+      <input type="text" class="form-control" id="fName" name="firstName" />
     </div>
-  </body>
-</html>
+    <div class="mb-3">
+      <label for="lName" class="form-label">Last Name</label>
+      <input type="text" class="form-control" id="lName" name="lastName" />
+    </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address</label>
+      <input type="text" class="form-control" id="email" name="email" />
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
